# emotion_self_interp

./: .gitignore  MASTER_PLAN.md  README.md  main.py  pyproject.toml
compat_envs/monet/: README.md  pyproject.toml  run.py  run_exp4.py
docs/: planning.md  research_log.md
scripts/: cross_model_summary.py  exp1_rwkv_partial.py  extract_emotion_vectors.py  extract_emotion_vectors_ouro.py  extract_emotion_vectors_rwkv.py  measure_behavior.py  pca_emotion_geometry.py  per_ut_deceptive_adapter_ouro.py  per_ut_step_adapter_ouro.py  per_ut_step_likert_ouro.py  run_experiment1.py  run_experiment2.py  run_experiment4.py  smoke_pipeline.py  state_conditional_substrate_rwkv.py  state_decay_rwkv.py  steer_read_matrix_ouro.py  sweep_per_ut_steering_ouro.py  sweep_steering.py  train_adapters.py
src/adapters/: __init__.py  scalar_affine.py  train.py
src/behaviors/: __init__.py  capability.py  likert.py  numeric.py  sentiment.py
src/data/: __init__.py  emotion_stimuli.py  stimuli.py
src/experiments/: __init__.py  experiment1.py  experiment2.py  experiment4.py  protocol.py
src/hooks/: __init__.py  extract.py
src/models/: __init__.py  adapter.py  rwkv7_adapter.py
src/probes/: __init__.py  diff_means.py
src/runs/: __init__.py  run_dir.py
tests/: conftest.py  test_adapters.py  test_behaviors_numeric.py  test_diff_means.py  test_emotion_stimuli.py  test_extract.py  test_model_adapter.py
