[project]
name = "emotion-self-interp"
version = "0.1.0"
description = "Grounded self-interpretation of functional emotional states in LLMs"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate>=1.0",
    "datasets>=3.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
    "rwkv>=0.8.32",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "protobuf>=7.34.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -ra"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.uv]
package = false
